- ADD: in the "check for updates" dialog a new
       context menu command to show the log. (Stefan)
- ADD: New option to specify the minimum size of a
       log message. (Stefan)
- CHG: Don't use the %APPDATA% env but the shell API to
       get the path to the config file in the settings
       dialog. (Stefan)
- BUG: TSVN could crash if a revprop did not exist. (Stefan)
- BUG: Newlines weren't shown correctly when editing
       the revprops. (Stefan)

Version 1.0.6
- ADD: A warning is shown if a file with local modifications
       should be removed. (Stefan)
- ADD: Changing of log-messages and author of any revision
       is possible from the log dialog - if the server has
       the required hooks set up to change revprops. (Stefan)
- ADD: Document the command line params of TSVN. (Stefan)
- ADD: The add and revert command can now be cancelled
       during operation. (Stefan)
- CHG: Performance improvement when committing a lot of 
       deleted/renamed/moved files. (Stefan)
- CHG: The "add before commit" option in the settings dialog is
       gone, this option is now in the commit dialog where it
       belongs. (Stefan)
- CHG: The check for newer versions is now started as an
       separate process to not disturb normal operation. (Stefan)
- BUG: The installer didn't work in non-gui mode, and the
       shortcuts in the program menu weren't set correctly. (Stefan)
- BUG: Fixed a memory leak when committing. (Stefan)
- BUG: Pressing the "Find" button in the merge dialog lead
       to an error message about the path being invalid. (Stefan)
- BUG: ignore patterns _not_ starting with * weren't correctly
       used inside unversioned folders. (Stefan)

Version 1.0.5
- ADD: Automatic check for newer version. (Stefan)
- ADD: The log dialog shows a progress bar while fetching
       the log messages. (Stefan)
- ADD: TortoiseMerge remembers its last size and window state. (Stefan)
- ADD: If all versioned files are selected in the commit dialog, and