@@ -1,4 +1,4 @@
-<appendix id="tsvn-faq">
+﻿<appendix id="tsvn-faq">
 	<title>Frequently Asked Questions (FAQ)</title>
 	<simplesect>
 		<para>
@@ -249,6 +249,10 @@ HKCU\Software\TortoiseSVN\OwnerdrawnMenus
 			10x10 icons. If you delete this registry key (the default) 
 			or set it to something else than 0 you have the nice 
 			icons back. 
+			</para>
+			<para>
+			In case you want no icons at all you can set this value to 2. Then
+			the context menu entries show up as text only.
 			</para>
 		</sect2>
 		<sect2 id="tsvn-faq-installation-6">
@@ -859,6 +863,11 @@ HKCU\Software\TortoiseSVN\OwnerdrawnMenus
 					This helps if you use something else than the windows
 					explorer or if you get problems with the context menu
 					showing up.
+					</para>
+					<para>
+					Set this value to 2 if you don't want TortoiseSVN to use
+					icons in the context menu at all. With this value set to 2
+					the context menu is text only.
 					</para>
 					</listitem>
 				</varlistentry>
